--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,14 +8,22 @@
   </head>
 
   <body>
-    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-    <p class="first">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, cum.
+    <img src="/CAREERTRONICS-removebg-preview.png" alt="Careertronic Logo" />
+    <h1>Welcome to Careertronic Full Stack Development Sessions</h1>
+    <h3>Raipur</h3>
+    <h2>About us</h2>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur,
+      veniam? Sed perferendis blanditiis voluptatum molestiae!lorem ipsum dolor
+      sit amet consectetur adipisicing elit. Quisquam, voluptatum.
     </p>
-    <h2>Lorem ipsum dolor sit.</h2>
-    <p id="unique">MAi to bhaiya unique hu</p>
-    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-    <p>lorem 2</p>
-    <p class="first">lorem 6</p>
+    <h2>Services</h2>
+    <ol>
+      <li>Certification Courses</li>
+      <li>IT projects</li>
+      <li>Overseas Education</li>
+      <li>Job portal</li>
+    </ol>
+    <a href="www.careertronic.com">Visit Us here</a>
   </body>
 </html>
