--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <div>Hie Shubham</div>
     <h1>Local version + Remote version</h1>
 
-    <script src="/javascript/types.js"></script>
-
-    <script src="/script.js"></script>
+    <script src="/spreadrest.js"></script>
   </body>
 </html>
