--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css" />
+    <title>Gulshan</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div>Hie Shubham</div>
-    <h1>Local version + Remote version</h1>
-
-    <script src="/spreadrest.js"></script>
+    <div class="shubham">
+      <h1>Hie Welcome to JS</h1>
+      <p>Lorem ipsum dolor sit.</p>
+      <h2>dsf</h2>
+      <button>Click</button>
+    </div>
+    <p class="shubham"><span>Hie</span></p>
+    <script src="./script.js"></script>
   </body>
 </html>
