--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="shubham">
+    <div id="shubham">
       <h1>Hie Welcome to JS</h1>
-      <p>Lorem ipsum dolor sit.</p>
+      <p id="para">
+        Lorem ipsum dolor sit.<span style="display: none">MAi to naya hu </span>
+      </p>
       <h2>dsf</h2>
       <button>Click</button>
+      <input id="password" type="password" value="**" />
     </div>
     <p class="shubham"><span>Hie</span></p>
+    <ul>
+      <li>One</li>
+      <li>two</li>
+      <li>three</li>
+    </ul>
     <script src="./script.js"></script>
   </body>
 </html>
